--- a/src/App.css
+++ b/src/App.css
@@ -204,7 +204,7 @@
 }
 .Container{
   width: 100%;
-  height: 130px;
+  height: 160px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -217,7 +217,7 @@
   padding: 2% 1% 1% 1%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   background-color: rgba(30, 33, 58, 1);
 }
